k8s/namespace.yml
kind: Namespace
apiVersion: v1 # this is kubernetes api version
metadata:
  name: snl
